Change app resources to resolve dark mode. Add info message for scrool down

--- a/src/app/pages/dialogs/dialogs.component.tns.css
+++ b/src/app/pages/dialogs/dialogs.component.tns.css
@@ -30,3 +30,9 @@
     background-position: center;
     background-size: cover;
 }
+
+.helpText{
+    color: black;
+    font-size: 10;
+    margin-top: 10;
+}
